# stparser

./: README.rst  pyproject.toml
stparser/: __init__.py  stparser.py
str2type/: __init__.py  str2type.py
tests/: test_str2type.py
