[tool.poetry]
name = "stparser"
version = "0.1.3"
description = "A tool to convert strings to types. Primary use case is type specifications in configuration files."
authors = ["Patrick Wells <pwells@ucdavis.edu>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
